--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="col-md-2 offset-md-7">
                         <div class="blocks_phone">
                             <div class="blocks_img">
-                                <img src="/icons/phone.svg" alt="phone">
+                                <img src="./icons/phone.svg" alt="phone">
                             </div>
                             <span> +7 (913) 617-81-30</span>
                         </div>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <img src="/img/logo.png" alt="logo_mafia">
+                        <img src="./img/logo.png" alt="logo_mafia">
                     </div>
                 </div>
             </div>
@@ -54,8 +54,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="slider_container">
-                        <img class="slider_prev arr_mobile" src="/icons/next.svg" alt="next">
-                        <img class="slider_next arr_mobile" src="/icons/prev.svg" alt="next">
+                        <img class="slider_prev arr_mobile" src="./icons/next.svg" alt="next">
+                        <img class="slider_next arr_mobile" src="./icons/prev.svg" alt="next">
                         <div class="mobile slider_img slider_img1 show"></div>
                         <div class="mobile slider_img slider_img2 hide"></div>
                         <div class="mobile slider_img slider_img3 hide"></div>
@@ -87,7 +87,7 @@
                     <div class="team_peoples">
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Автор игры <br></span>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Соавтор <br></span>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Соавтор <br></span>
@@ -114,7 +114,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Соавтор <br></span>
@@ -127,7 +127,7 @@
                     <div class="team_peoples">
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Разработчик основного <br> стиля игры и логотипа <br></span>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Дизайнер <br></span>
@@ -145,7 +145,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="/img/vorobev.jpeg" alt="">
+                                <img src="./img/vorobev.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Цифровизатор <br></span>
