--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mafia</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:wght@200..800">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:semi-bold">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -87,7 +88,7 @@
                     <div class="team_peoples">
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Автор игры <br></span>
@@ -96,7 +97,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Соавтор <br></span>
@@ -105,7 +106,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Соавтор <br></span>
@@ -114,7 +115,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Соавтор <br></span>
@@ -127,7 +128,7 @@
                     <div class="team_peoples">
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Разработчик основного <br> стиля игры и логотипа <br></span>
@@ -136,7 +137,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Дизайнер <br></span>
@@ -145,7 +146,7 @@
                         </div>
                         <div class="team_peoples_people">
                             <div class="rounded">
-                                <img src="./img/vorobev.jpeg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="text">
                                 <span class="team_title">Цифровизатор <br></span>
