--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                     <div class="col-md-6">
                         <h1>Битва мафий</h1>
                         <h2>Настольная игра от 2 до 8 участников</h2>
-                        <div class="start_block">
-                            <a href="#">Запись на бесплатную пробную игру</a>
-                        </div>
+                        <a class="start_link" href="#">
+                            <div class="start_block">
+                                <span>Запись на бесплатную пробную игру</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-md-5">
                         <img src="./img/logo.png" alt="logo_mafia">
