--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="col-md-6">
                         <h1>Битва мафий</h1>
                         <h2>Настольная игра от 2 до 8 участников</h2>
-                        <a class="start_link" href="#">
+                        <a class="start_link" href="https://docs.google.com/spreadsheets/d/17OkYrYnB_oh_DCfKDmACRAezPNUPX4fM/edit?usp=drivesdk&ouid=114382334229072179998&rtpof=true&sd=true">
                             <div class="start_block">
                                 <span>Запись на бесплатную пробную игру</span>
                             </div>
